# cyberdog_tracking_base

./: README.md
.github/workflows/: workflow.yml
bt_navigators/: CMakeLists.txt  README.md  package.xml
bt_navigators/include/bt_navigators/: bt_navigator_ab.hpp  bt_navigator_docking.hpp  bt_navigator_tracking.hpp  navigator.hpp
bt_navigators/include/bt_navigators/navigators/: auto_docking.hpp  navigate_pose.hpp  target_tracking.hpp
bt_navigators/src/: bt_navigator.cpp  bt_navigator_ab.cpp  bt_navigator_docking.cpp  bt_navigator_tracking.cpp  main.cpp
bt_navigators/src/navigators/: auto_docking.cpp  navigate_pose.cpp  target_tracking.cpp
mcr_bringup/: CMakeLists.txt  README.md  package.xml
mcr_bringup/behavior_trees/: auto_docking.xml  automatic_recharge.xml  automatic_recharge_old.xml  navigate_to_pose_w_replanning.xml  navigate_to_pose_w_replanning_and_recovery.xml  target_tracking.xml
mcr_bringup/launch/: bringup_dock_launch.py  bringup_follow_launch.py  bringup_follow_only_launch.py  bringup_navigate_to_pose_launch.py
mcr_bringup/params/: auto_charging.yaml  auto_docking.yaml  follow_only_params.yaml  follow_params.yaml  follow_params.yaml.bak  nav2_params.yaml  nav2_params_follow.yaml  navigate_to_pose_params.yaml  recoveries_params.yaml
mcr_bringup/scripts/: start_follow.sh
mcr_bt_navigator/: CMakeLists.txt  README.md  package.xml
mcr_bt_navigator/include/mcr_bt_navigator/: bt_navigator.hpp  navigator.hpp
mcr_bt_navigator/src/: bt_navigator.cpp  main.cpp
mcr_bt_navigator/src/navigators/: target_tracking.cpp
mcr_controller/: CMakeLists.txt  package.xml
mcr_controller/include/mcr_controller/: controller_server.hpp
mcr_controller/src/: controller_server.cpp  main.cpp
mcr_global_planner/: CMakeLists.txt  mcr_global_planner_plugin.xml  package.xml
mcr_global_planner/launch/: mcr_planner.launch.py
mcr_global_planner/mcr_global_planner/: CMakeLists.txt  mcr_global_planner_plugin.xml  package.xml
mcr_global_planner/mcr_global_planner/include/mcr_global_planner/: cost_interpreter.h  cost_interpreter.hpp  exceptions.h  exceptions.hpp  kernel_function.h  kernel_function.hpp  mcr_curve_planner.h  mcr_curve_planner.hpp  mcr_global_planner.h  mcr_global_planner.hpp  mcr_spline_planner.h  mcr_spline_planner.hpp  potential.h  potential.hpp  potential_calculator.h  potential_calculator.hpp  spliner.h  spliner.hpp  traceback.h  traceback.hpp
mcr_global_planner/mcr_global_planner/launch/: mcr_planner.launch.py
mcr_global_planner/mcr_global_planner/params/: planner_params.yaml
mcr_global_planner/mcr_global_planner/src/: cost_interpreter.cpp  global_planner.cpp  mcr_curve_planner.cpp  mcr_global_planner.cpp  mcr_spline_planner.cpp
mcr_global_planner/mcr_nav_grid/: CMakeLists.txt  package.xml
mcr_global_planner/mcr_planner_plugins/: CMakeLists.txt  mcr_planner_plugins.xml  package.xml
mcr_global_planner/mcr_planner_plugins/include/mcr_planner_plugins/: astar.h  astar.hpp  b_spliner.h  b_spliner.hpp  bezier_spliner.h  bezier_spliner.hpp  dijkstra.h  dijkstra.hpp  gradient_path.h  gradient_path.hpp  grid_path.h  grid_path.hpp  linear_interpolation.hpp  polynomial_fitting.h  polynomial_fitting.hpp  polynomial_interpolation.h  polynomial_interpolation.hpp  von_neumann_path.h  von_neumann_path.hpp
mcr_global_planner/mcr_planner_plugins/src/: astar.cpp  b_spliner.cpp  bezier_spliner.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  linear_interpolation.cpp  polynomial_fitting.cpp  polynomial_interpolation.cpp  von_neumann_path.cpp
mcr_global_planner/src/: mcr_spline_planner.cpp
mcr_msgs/: CMakeLists.txt  README.md  package.xml
mcr_msgs/action/: AutomaticRecharge.action  ComputePathSplinePoses.action  TargetTracking.action
mcr_msgs/srv/: SwitchMode.srv
mcr_planner/: CMakeLists.txt  README.md  package.xml
mcr_planner/src/: main.cpp  planner_server.cpp
mcr_tracking_components/: CMakeLists.txt  README.md  behavior_tree_nodes.xml  controller_plugins.xml  costmap_plugins.xml  dwb_critics.xml  orientation_derivers.xml  package.xml  recoveries.xml
mcr_tracking_components/include/mcr_tracking_components/behavior_tree_nodes/: change_gait_node.hpp  charger_updater_node.hpp  compute_path_spline_poses_action.hpp  compute_path_to_pose_action.hpp  exception_verify_node.hpp  follow_path_action.hpp  is_battery_in_charge_condition.hpp  orientation_derivers.hpp  seat_adjust_client_node.hpp  spin_and_search_action.hpp  target_updater_node.hpp  tracking_mode_decider_node.hpp
mcr_tracking_components/include/mcr_tracking_components/controller_plugins/: fake_progress_checker.hpp  unreachable_goal_checker.hpp  x_goal_checker.hpp  xy_goal_checker.hpp
mcr_tracking_components/include/mcr_tracking_components/costmap_layers/: obstacle_layer.hpp
mcr_tracking_components/include/mcr_tracking_components/dwb_critics/: keep_person_insight.hpp  keep_target_insight.hpp
mcr_tracking_components/include/mcr_tracking_components/recoveries/: spin_and_search.hpp  spin_and_search_person.hpp
mcr_tracking_components/src/behavior_tree_nodes/: change_gait_node.cpp  charger_updater_node.cpp  compute_path_spline_poses_action.cpp  compute_path_to_pose_action.cpp  exception_verify_node.cpp  follow_path_action.cpp  is_battery_in_charge_condition.cpp  orientation_derivers.cpp  seat_adjust_client_node.cpp  spin_and_search_action.cpp  target_updater_node.cpp  tracking_mode_decider_node.cpp
mcr_tracking_components/src/controller_plugins/: fake_progress_checker.cpp  unreachable_goal_checker.cpp  x_goal_checker.cpp  xy_goal_checker.cpp
mcr_tracking_components/src/costmap_layers/: obstacle_layer.cpp
mcr_tracking_components/src/dwb_critics/: keep_person_insight.cpp  keep_target_insight.cpp
mcr_tracking_components/src/recoveries/: spin_and_search.cpp  spin_and_search_person.cpp
mcr_uwb/: CMakeLists.txt  README.md  package.xml
mcr_uwb/include/mcr_uwb/: mcr_uwb.hpp
mcr_uwb/launch/: uwb_launch.py
mcr_uwb/src/: main.cpp  mcr_uwb.cpp
mcr_voice/: CMakeLists.txt  README.md  package.xml
mcr_voice/launch/: voice_launch.py
mcr_voice/src/: main.cpp  mcr_voice.cpp
(+14 files in other folders)
